# bausastra

./: .editorconfig  .eslintrc.json  .gitignore  .graphqlrc.json  .prettierrc.json  README.md  package.json  pnpm-lock.yaml
.github/workflows/: node-ci.yaml
api/: bausastra-api.cabal  client_session_key.aes
api/src/: Application.hs  Main.hs
client/: .browserslistrc  .eslintrc.json  jest.config.js  package.json  webpack.config.js
client/public/: index.html
client/src/: App.js  App.test.js
graphql/: schema.graphql
server/: .eslintrc.json  babel.config.json  jest.config.js  nodemon.json  package.json
server/src/: app.controller.js  app.controller.test.js  app.service.js  app.test.js  index.js
web/: elm.json  index.html  package-lock.json  package.json  vite.config.js  windi.config.js
web/src/: Main.elm  index.js
