cabal-version: 3.0
name:          bausastra-api
version:       0.1.0.0
author:        Ananda Umamil
maintainer:    zweimach@zweimach.org
license:       AGPL-3.0-or-later

executable bausastra-api
    hs-source-dirs:   src
    main-is:          Main.hs
    other-modules:    Application
    default-language: Haskell2010
    build-depends:
        , base        ^>=4.13.0.0
        , bytestring  ^>=0.10
        , text        >=0.11     && <2.0
        , yesod       ^>=1.6
        , yesod-core  ^>=1.6
